# PJTL-RYW-Dashboard

./: .gitignore  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  openapi.yaml  pyproject.toml
backend/api/: __init__.py  app.py  auth.py  baseline.py  config.py  deps.py  intake_pipeline.py  jobs_store.py  main.py  metrics.py  ml_features.py  repo_root.py  schemas.py  store.py  upload_pipeline.py  viability_service.py
backend/api/middleware/: internal_secret.py  request_context.py
backend/api/routes/: health.py  inference_routes.py  kpis.py  metrics_admin.py  operational.py  operations_demo.py  upload_jobs.py  viability.py
backend/docs/: jwt-auth.md  production-runbook.md
backend/engine/: config.py  kpi_config.py  operational_service.py  pipeline.py
backend/engine/evaluation/: confidence.py  readiness_classifier.py  reconstruction.py
backend/engine/input_layer/: ingestion.py  normalization.py  phase1_bridge.py  variable_mapping.py
backend/engine/modules/: m1_demand.py  m2_contract.py  m3_capacity.py  m4_cost.py  m5_revenue_margin.py
backend/inference/: __init__.py  contracts.py  service.py
backend/tests/: test_api.py  test_inference_edge_cases.py  test_operational.py  test_phase1_bridge.py
config/: pjtl_kpis_and_formulas.json
docs/: README.md  changelog.md  deliverables.md  glossary.md  production-checklist.md  sanity-pass.md
frontend/: Dockerfile  nuxt.config.ts  package-lock.json  package.json
inference_engine/: README.md  requirements.txt
inputs/: README.md  RideYourWay_Prospective_Market_Intake_Example.xlsx  (+1 more)
(+235 files in other folders)
